crates/rolldown_utils/tests/ui/pass_harness/fail_construct_token.stderr
warning: unreachable expression
  --> tests/ui/pass_harness/fail_construct_token.rs:11:16
   |
10 |     _brand: todo!(),
   |             ------- any code following this expression is unreachable
11 |     _lifetime: PhantomData,
   |                ^^^^^^^^^^^ unreachable expression
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0451]: fields `_brand`, `_lifetime` and `_pass` of struct `RunToken` are private
  --> tests/ui/pass_harness/fail_construct_token.rs:10:5
   |
 9 |   let _ = RunToken::<EchoPass> {
   |           -------------------- in this type
10 |     _brand: todo!(),
   |     ^^^^^^ private field
11 |     _lifetime: PhantomData,
   |     ^^^^^^^^^ private field
12 |     _pass: PhantomData,
   |     ^^^^^ private field

error: type `pass::RunBrand` is private
  --> tests/ui/pass_harness/fail_construct_token.rs:10:13
   |
10 |     _brand: todo!(),
   |             ^^^^^^^ private type
